Fix horizontal scroll on the main pages

--- a/components/LeagueBanner/styles.module.scss
+++ b/components/LeagueBanner/styles.module.scss
@@ -1,7 +1,6 @@
 .banner {
   background: var(--premier-bg-color);
   border-radius: .5rem;
-  margin: 0 1rem;
   display: flex;
   align-items: center;
   padding: 0 1rem;
